Fix expansion of truncated legend values
Switched to a div block container and moved the text-overflow styling there.

--- a/src/kibana/components/vislib/styles/_legend.less
+++ b/src/kibana/components/vislib/styles/_legend.less
@@ -45,10 +45,13 @@
       cursor: default;
       text-align: left;
       .flex-grow(2);
-      white-space: nowrap;
       overflow-x: hidden;
-      text-overflow: ellipsis;
       max-width: 150px;
+      & > div {
+        white-space: nowrap;
+        overflow-x: hidden;
+        text-overflow: ellipsis;
+      }
 
       .dots {
         padding-right: 5px;
